<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!--
    /*
     *   This content is generated from the API File Info.
     *   (Alt+Shift+Ctrl+I).
     *
     *   @desc
     *   @file       memberjoin3
     *   @date       Tuesday 25th of July 2023 02:00:55 AM
     *   @title       Page 1
     *   @author
     *   @keywords
     *   @generator    Export Kit v1.3.figma
     *
     */
    -->
	<ScrollView android:id="@+id/memberjoin3"
		android:layout_width="wrap_content"
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__memberjoin3"
				android:background="@drawable/_bg__memberjoin3_shape"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="640dp" />

			<ImageView android:id="@+id/__img___nexticon3"
				android:src="@drawable/__img___nexticon3"
				android:contentDescription="__img___nexticon3"
				android:layout_marginStart="224dp"
				android:layout_marginTop="527dp"
				android:layout_width="79dp"
				android:layout_height="46dp" />

			<ImageView android:id="@+id/backicon3"
				android:src="@drawable/backicon3"
				android:contentDescription="backicon3"
				android:layout_marginStart="13dp"
				android:layout_marginTop="44dp"
				android:layout_width="27dp"
				android:layout_height="27dp" />

			<View   android:id="@+id/rectangle_22"
				android:background="@drawable/rectangle_22_shape"
				android:layout_marginStart="57dp"
				android:layout_marginTop="217dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_21"
				android:background="@drawable/rectangle_21_shape"
				android:layout_marginStart="57dp"
				android:layout_marginTop="320dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_20"
				android:background="@drawable/rectangle_20_shape"
				android:layout_marginStart="57dp"
				android:layout_marginTop="358dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_19"
				android:background="@drawable/rectangle_19_shape"
				android:layout_marginStart="57dp"
				android:layout_marginTop="396dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_18"
				android:background="@drawable/rectangle_18_shape"
				android:layout_marginStart="133dp"
				android:layout_marginTop="217dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_17"
				android:background="@drawable/rectangle_17_shape"
				android:layout_marginStart="133dp"
				android:layout_marginTop="320dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_16"
				android:background="@drawable/rectangle_16_shape"
				android:layout_marginStart="133dp"
				android:layout_marginTop="358dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_15"
				android:background="@drawable/rectangle_15_shape"
				android:layout_marginStart="229dp"
				android:layout_marginTop="217dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_14"
				android:background="@drawable/rectangle_14_shape"
				android:layout_marginStart="229dp"
				android:layout_marginTop="320dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<View   android:id="@+id/rectangle_13"
				android:background="@drawable/rectangle_13_shape"
				android:layout_marginStart="229dp"
				android:layout_marginTop="358dp"
				android:layout_width="18dp"
				android:layout_height="18dp" />

			<TextView android:id="@+id/t33ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="123dp"
				android:layout_marginTop="47dp"
				android:layout_width="150dp"
				android:layout_height="33dp"
				android:text="@string/t33ttt_string"
				/>

			<TextView android:id="@+id/t32ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="57dp"
				android:layout_marginTop="181dp"
				android:layout_width="65dp"
				android:layout_height="24dp"
				android:text="@string/t32ttt_string"
				/>

			<TextView android:id="@+id/t31ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="81dp"
				android:layout_marginTop="218dp"
				android:layout_width="51dp"
				android:layout_height="24dp"
				android:text="@string/t31ttt_string"
				/>

			<TextView android:id="@+id/t30ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="81dp"
				android:layout_marginTop="321dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t30ttt_string"
				/>

			<TextView android:id="@+id/t29ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="81dp"
				android:layout_marginTop="359dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t29ttt_string"
				/>

			<TextView android:id="@+id/t28ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="81dp"
				android:layout_marginTop="397dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t28ttt_string"
				/>

			<TextView android:id="@+id/t27ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="157dp"
				android:layout_marginTop="218dp"
				android:layout_width="65dp"
				android:layout_height="24dp"
				android:text="@string/t27ttt_string"
				/>

			<TextView android:id="@+id/t26ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="157dp"
				android:layout_marginTop="321dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t26ttt_string"
				/>

			<TextView android:id="@+id/t25ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="157dp"
				android:layout_marginTop="359dp"
				android:layout_width="51dp"
				android:layout_height="24dp"
				android:text="@string/t25ttt_string"
				/>

			<TextView android:id="@+id/t24ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="253dp"
				android:layout_marginTop="218dp"
				android:layout_width="65dp"
				android:layout_height="24dp"
				android:text="@string/t24ttt_string"
				/>

			<TextView android:id="@+id/t23ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="253dp"
				android:layout_marginTop="321dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t23ttt_string"
				/>

			<TextView android:id="@+id/t22ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="253dp"
				android:layout_marginTop="359dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t22ttt_string"
				/>

			<TextView android:id="@+id/t21ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/t33ttt_color"
				android:layout_marginLeft="57dp"
				android:layout_marginTop="283dp"
				android:layout_width="65dp"
				android:layout_height="24dp"
				android:text="@string/t21ttt_string"
				/>

			<ImageView android:id="@+id/vector_1"
				android:src="@drawable/vector_1"
				android:contentDescription="vector_1"
				android:layout_marginStart="54dp"
				android:layout_marginTop="262dp"
				android:layout_width="253dp"
				android:layout_height="0dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>