<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		profileedit_x
	 *	@date 		Tuesday 25th of July 2023 02:32:28 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/profileedit_x" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View   android:id="@+id/_bg__profileedit_x"
				android:background="@drawable/_bg__profileedit_x_shape"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="640dp" />

			<View   android:id="@+id/rectangle_42"
				android:background="@drawable/rectangle_42_shape"
				 android:layout_marginStart="224dp"
				android:layout_marginTop="527dp"
				android:layout_width="79dp"
				android:layout_height="46dp" />

			<View   android:id="@+id/rectangle_41"
				android:background="@drawable/rectangle_41_shape"
				 android:layout_marginStart="130dp"
				android:layout_marginTop="340dp"
				android:layout_width="99dp"
				android:layout_height="29dp" />

			<View   android:id="@+id/rectangle_40"
				android:background="@drawable/rectangle_40_shape"
				 android:layout_marginStart="130dp"
				android:layout_marginTop="393dp"
				android:layout_width="99dp"
				android:layout_height="29dp" />

			<View   android:id="@+id/rectangle_39"
				android:background="@drawable/rectangle_39_shape"
				 android:layout_marginStart="130dp"
				android:layout_marginTop="446dp"
				android:layout_width="99dp"
				android:layout_height="29dp" />

			<ImageView android:id="@+id/backicon9"
				android:src="@drawable/backicon9"
				android:contentDescription="backicon9"
				 android:layout_marginStart="13dp"
				android:layout_marginTop="44dp"
				android:layout_width="27dp"
				android:layout_height="27dp" />

			<TextView android:id="@+id/t58ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="16sp"
				android:textColor="@color/t58ttt_color"
				android:layout_marginLeft="148dp"
				android:layout_marginTop="46dp"
				android:layout_width="99dp"
				android:layout_height="33dp"
				android:text="@string/t58ttt_string"
				 />

			<View   android:id="@+id/rectangle_38"
				android:background="@drawable/rectangle_38_shape"
				 android:layout_marginStart="130dp"
				android:layout_marginTop="269dp"
				android:layout_width="99dp"
				android:layout_height="30dp" />

			<TextView android:id="@+id/t57ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/_bg__profileedit_x_color"
				android:layout_marginLeft="252dp"
				android:layout_marginTop="542dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t57ttt_string"
				 />

			<TextView android:id="@+id/t56ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/t56ttt_color"
				android:layout_marginLeft="138dp"
				android:layout_marginTop="276dp"
				android:layout_width="101dp"
				android:layout_height="24dp"
				android:text="@string/t56ttt_string"
				 />

			<TextView android:id="@+id/t55ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/t56ttt_color"
				android:layout_marginLeft="100dp"
				android:layout_marginTop="347dp"
				android:layout_width="40dp"
				android:layout_height="24dp"
				android:text="@string/t55ttt_string"
				 />

			<TextView android:id="@+id/t54ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/t56ttt_color"
				android:layout_marginLeft="76dp"
				android:layout_marginTop="400dp"
				android:layout_width="65dp"
				android:layout_height="24dp"
				android:text="@string/t54ttt_string"
				 />

			<TextView android:id="@+id/t53ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/t56ttt_color"
				android:layout_marginLeft="76dp"
				android:layout_marginTop="453dp"
				android:layout_width="65dp"
				android:layout_height="24dp"
				android:text="@string/t53ttt_string"
				 />

			<ImageView android:id="@+id/myicon2"
				android:src="@drawable/myicon2"
				android:contentDescription="myicon2"
				 android:layout_marginStart="119dp"
				android:layout_marginTop="140dp"
				android:layout_width="121dp"
				android:layout_height="121dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>