<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		login
	 *	@date 		Tuesday 25th of July 2023 01:26:36 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/login" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View
				android:id="@+id/_bg__login"
				android:layout_width="360dp"
				android:layout_height="640dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:background="@drawable/_bg__login_shape" />

			<View   android:id="@+id/rectangle_3"
				android:background="@drawable/rectangle_3_shape"
				 android:layout_marginStart="57dp"
				android:layout_marginTop="375dp"
				android:layout_width="246dp"
				android:layout_height="46dp" />

			<View
				android:id="@+id/rectangle_2"
				android:layout_width="246dp"
				android:layout_height="46dp"
				android:layout_marginStart="57dp"
				android:layout_marginTop="321dp"
				android:background="@drawable/rectangle_2_shape" />

			<View   android:id="@+id/rectangle_1"
				android:background="@drawable/rectangle_1_shape"
				 android:layout_marginStart="57dp"
				android:layout_marginTop="267dp"
				android:layout_width="246dp"
				android:layout_height="46dp" />

			<TextView android:id="@+id/t5ttt"
				android:fontFamily="Noto Sans"
				android:textSize="12sp"
				android:textColor="@color/t5ttt_color"
				android:layout_marginLeft="63dp"
				android:layout_marginTop="429dp"
				android:layout_width="139dp"
				android:layout_height="24dp"
				android:text="rk"
				 />

			<TextView android:id="@+id/t4ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/rectangle_3_color"
				android:layout_marginLeft="231dp"
				android:layout_marginTop="429dp"
				android:layout_width="84dp"
				android:layout_height="24dp"
				android:text="@string/t4ttt_string"
				 />

			<TextView android:id="@+id/t3ttt"
				android:fontFamily="Noto Sans"
				android:textStyle="bold"
				android:textSize="12sp"
				android:textColor="@color/_bg__login_color"
				android:layout_marginLeft="152dp"
				android:layout_marginTop="390dp"
				android:layout_width="73dp"
				android:layout_height="24dp"
				android:text="@string/t3ttt_string"
				 />

			<TextView
				android:id="@+id/t2ttt"
				android:layout_width="131dp"
				android:layout_height="24dp"
				android:layout_marginLeft="69dp"
				android:layout_marginTop="336dp"
				android:fontFamily="Noto Sans"
				android:text="@string/t2ttt_string"
				android:textColor="@color/t2ttt_color"
				android:textSize="12sp" />

			<TextView
				android:id="@+id/t1ttt"
				android:layout_width="120dp"
				android:layout_height="24dp"
				android:layout_marginLeft="69dp"
				android:layout_marginTop="282dp"
				android:fontFamily="Noto Sans"
				android:text="@string/t1ttt_string"
				android:textColor="@color/t2ttt_color"
				android:textSize="12sp" />

			<ImageView android:id="@+id/yocipelogo1"
				android:src="@drawable/yocipelogo1"
				android:contentDescription="yocipelogo1"
				 android:layout_marginStart="113dp"
				android:layout_marginTop="105dp"
				android:layout_width="133dp"
				android:layout_height="133dp" />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>